TreeView of all drives and files

--- a/WPFTreeView/WPFTreeView.csproj
+++ b/WPFTreeView/WPFTreeView.csproj
@@ -93,5 +93,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\PC_go-14-512.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
